foodでのCRUD機能を実装

--- a/app/views/foods/index.html.haml
+++ b/app/views/foods/index.html.haml
@@ -1,3 +1,21 @@
 %h1 食材一覧
 
 = link_to '新規登録', new_food_path, class: 'btn btn-primary'
+
+.mb-3
+%table.table.table-hover
+  %thead.thead-default
+    %tr
+      %th= Food.human_attribute_name(:name)
+      %th= Food.human_attribute_name(:number)
+      %th= Food.human_attribute_name(:unit)
+      %th
+  %tbody
+    - @foods.each do |food|
+      %tr
+        %td= link_to food.name, food
+        %td= food.number
+        %td= food.unit
+        %td
+          = link_to '編集', edit_food_path(food), class: 'btn btn-primary mr-3'
+          = link_to '削除', food, method: :delete, data: { confirm: "食品「#{food.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
