--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
       %p
         Alert: #{flash[:alert]}
     %nav.navbar.navbar-light.bg-light
-      %a.navbar-brand{href: "#"} My Fridge
+      %a.navbar-brand{href: "/"} My Fridge
     .container
       - if flash.notice.present?
         .alert.alert-success= flash.notice
