--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,5 +19,7 @@
       %a.navbar-brand{href: "/"} My Fridge
     .container
       - if flash.notice.present?
-        .alert.alert-success= flash.notice
+        .alert.alert-success
+          = flash.notice
+          %button.close{"data-dismiss" => "alert", type: "button"} &times;
       = yield
