--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,8 +15,19 @@
     -# - if flash[:alert]
       %p
         Alert: #{flash[:alert]}
-    %nav.navbar.navbar-light.bg-light
-      %a.navbar-brand{href: "/"} My Fridge
+    %nav.navbar.navbar-expand-lg.navbar-light.bg-light
+      %a.navbar-brand{:href => "#"} My Fridge
+      %button.navbar-toggler{"aria-controls" => "navbarNavDropdown", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarNavDropdown", "data-toggle" => "collapse", :type => "button"}
+        %span.navbar-toggler-icon
+      #navbarNavDropdown.collapse.navbar-collapse.container
+        %ul.navbar-nav.ml-auto.mr-5.row
+          %li.nav-item.dropdown.col
+            %a#navbarDropdownMenuLink.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"} Menu
+            .dropdown-menu{"aria-labelledby" => "navbarDropdownMenuLink"}
+              - if user_signed_in?
+                = link_to 'ログアウト', destroy_user_session_path, data: { method: 'delete' }, class:  'dropdown-item'
+              - else
+                = link_to 'ログイン', new_user_session_path, class: 'dropdown-item'
     .container
       - if flash.notice.present?
         .alert.alert-success
