--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,20 +1,21 @@
 %h2= t('.sign_up')
+-# = form_with(model: resource, scope: resource_name, url: registration_path(resource_name)) do |f|
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = render "devise/shared/error_messages", resource: resource
-  .field
+  .field.form-group
     = f.label :email
     %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
+    = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', placeholder: 'Enter Email'
+  .field.form-group
     = f.label :password
     - if @minimum_password_length
       %em= t('devise.shared.minimum_password_length', count: @minimum_password_length)
     %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
+    = f.password_field :password, autocomplete: "new-password", class: 'form-control', placeholder: 'Password'
+  .field.form-group
     = f.label :password_confirmation
     %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
+    = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', placeholder: 'Password'
+  .actions.mb-2
     = f.submit t('.sign_up')
 = render "devise/shared/links"
