--- a/app/views/foods/index.html.haml
+++ b/app/views/foods/index.html.haml
@@ -3,6 +3,7 @@
 = link_to '新規登録', new_food_path, class: 'btn btn-primary'
 
 .mb-3
+%h1 冷蔵
 %table.table.table-hover
   %thead.thead-default
     %tr
@@ -12,10 +13,29 @@
       %th
   %tbody
     - @foods.each do |food|
-      %tr
-        %td= link_to food.name, food
-        %td= food.number
-        %td= food.unit
-        %td
-          = link_to '編集', edit_food_path(food), class: 'btn btn-primary mr-3'
-          = link_to '削除', food, method: :delete, data: { confirm: "食品「#{food.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
+      - if food.location == 'refrigerated'
+        %tr.pointer{"data-href": food_path(food)}
+          %td= food.name
+          %td= food.number
+          %td= food.unit
+          %td.text-right
+            = link_to '編集', edit_food_path(food), class: 'btn btn-primary mr-3'
+            = link_to '削除', food, method: :delete, data: { confirm: "食品「#{food.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
+%h1 冷凍
+%table.table.table-hover
+  %thead.thead-default
+    %tr
+      %th= Food.human_attribute_name(:name)
+      %th= Food.human_attribute_name(:number)
+      %th= Food.human_attribute_name(:unit)
+      %th
+  %tbody
+    - @foods.each do |food|
+      - if food.location == 'frozen'
+        %tr.pointer{"data-href": food_path(food)}
+          %td= link_to food.name, food
+          %td= food.number
+          %td= food.unit
+          %td.text-right
+            = link_to '編集', edit_food_path(food), class: 'btn btn-primary mr-3'
+            = link_to '削除', food, method: :delete, data: { confirm: "食品「#{food.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
