--- a/app/views/foods/index.html.haml
+++ b/app/views/foods/index.html.haml
@@ -1,6 +1,6 @@
 %h1 食材一覧
 
-= link_to '新規登録', new_food_path, class: 'btn btn-primary'
+= link_to '新規登録', new_food_path, class: 'btn btn-light'
 
 .mb-3
 %h1 冷蔵
