[update]font-awesomeを適用し、アイコンを表示できるように変更

--- a/app/views/foods/index.html.haml
+++ b/app/views/foods/index.html.haml
@@ -19,8 +19,10 @@
           %td= food.number
           %td= food.unit
           %td.text-right
-            = link_to '編集', edit_food_path(food), class: 'btn btn-primary mr-3'
-            = link_to '削除', food, method: :delete, data: { confirm: "食品「#{food.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
+            = link_to edit_food_path(food), class: 'btn btn-light mr-3' do
+              %i.fa-solid.fa-pen.fa-1x
+            = link_to food, method: :delete, data: { confirm: "食品「#{food.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger' do
+              %i.fa-solid.fa-trash-can.fa-1x
 %h1 冷凍
 %table.table.table-hover
   %thead.thead-default
