--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,3 +4,21 @@
 a {
   color: black;
 }
+
+.col {
+  padding: 0;
+  margin: 0;
+}
+
+.row {
+  padding: 0;
+  margin: 0;
+}
+
+// .field_with_errors {
+//   display: contents;
+
+//   input,textarea {
+//     @extend .is-invalid;
+//   }
+// }
