--- a/app/views/foods/new.html.haml
+++ b/app/views/foods/new.html.haml
@@ -1,5 +1,9 @@
 %h1 食品の新規登録
 
+%Ul
+  - @food.errors.full_messages.each do |message|
+    %li= message
+
 .nav.justify-content-end
   = link_to '一覧', foods_path, class: 'nav-link'
 
