--- a/app/views/foods/show.html.haml
+++ b/app/views/foods/show.html.haml
@@ -20,5 +20,7 @@
       %th= Food.human_attribute_name(:purchase)
       %td= @food.purchase
 
-= link_to '編集', edit_food_path(@food), class: 'btn btn-primary mr-3'
-= link_to '削除', @food, method: :delete, data: { confirm: "食品「#{@food.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger'
+= link_to edit_food_path(@food), class: 'btn btn-secondary mr-3' do
+  %i.fa-solid.fa-pen.fa-1x
+= link_to @food, method: :delete, data: { confirm: "食品「#{@food.name}」を削除します。よろしいですか？" }, class: 'btn btn-danger' do
+  %i.fa-solid.fa-trash-can.fa-1x
