--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -18,6 +18,6 @@
       %h4 冷蔵庫の中身をWebで管理
     .justify-content-center.mt-5
       = link_to 'ログイン', new_user_session_path, class: 'mr-3 btn btn-light'
-      = link_to 'サインアップ', new_user_registration_path, class: 'btn btn-light'
+      = link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: 'btn btn-light'
     .justify-content-center.mt-5
-      = link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post, class: 'btn btn-light'
+      = link_to 'アカウント新規登録', new_user_registration_path, class: 'btn btn-light'
