--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -2,16 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-// .top-image {
-//   background-image: image-url('clay-banks-mIghSJJfWOc-unsplash.jpg');
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   // background-color: aqua;
-//   height: 100vh;
-//   width: 100%;
-//   filter: blur(3px);
-// }
-
 .top-image {
   background-attachment: fixed;
   background-image: image-url('clay-banks-mIghSJJfWOc-unsplash.jpg');
@@ -21,5 +11,12 @@
   position: relative;
   height: 100vh;
   width: 100%;
-  /*中に入るもの（テキスト）を縦横中央に配置*/
+}
+
+.top-text {
+  h1 {
+    @media only screen and (max-width:576px) {
+      font-size: 60px;
+    }
+  }
 }
