--- a/app/views/top/index.html.haml
+++ b/app/views/top/index.html.haml
@@ -18,7 +18,7 @@
       %h1.display-1.font-weight-bold My Fridge
       %h4 冷蔵庫の中身をWebで管理
     .justify-content-center.mt-5
-      = link_to 'ログイン', new_user_session_path, class: 'mr-3 btn btn-light'
       = link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: 'btn btn-light'
     .justify-content-center.mt-5
-      = link_to 'アカウント新規登録', new_user_registration_path, class: 'btn btn-light'
+      = link_to 'ログイン', new_user_session_path, class: 'mr-3 btn btn-light'
+      = link_to 'ユーザー登録', new_user_registration_path, class: 'btn btn-light'
