--- a/app/views/foods/_form.html.haml
+++ b/app/views/foods/_form.html.haml
@@ -19,4 +19,4 @@
   .form-group
     = f.label :description
     = f.text_area :description, class: 'form-control', id: 'food_description'
-  = f.submit nil, class: 'btn btn-primary'
+  = f.submit nil, class: 'btn btn-info'
